my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EANULL/EANULL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EANULL.dml:10:1: In A
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EANULL.dml:10:1: error EANULL: attribute has no get or set method
